tests/source/floats/invalid/parser/invalid_type_specifier.c
int main(void) {
    /* "Unsigned float" is not a valid type specifier */
    unsigned float d = 10.0;
    return 0;
}
